feat: adiciona tela de cadastro cliente

--- a/project-meu-cantinho/frontend/src/app/features/auth/login/login.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/auth/login/login.component.html
@@ -56,7 +56,7 @@
     </form>
 
     <div class="login-footer">
-      <p>Não tem uma conta? <a href="/register">Cadastre-se</a></p>
+      <p>Não tem uma conta? <a routerLink="/register">Cadastre-se</a></p>
     </div>
   </div>
 </div>
