feat: adiciona crud funcionario para admin

--- a/project-meu-cantinho/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/project-meu-cantinho/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -23,6 +23,10 @@
             <span class="nav-icon">👥</span>
             <span>Clientes</span>
           </a>
+          <a routerLink="/admin/funcionarios" routerLinkActive="active" class="nav-link">
+            <span class="nav-icon">👔</span>
+            <span>Funcionários</span>
+          </a>
           <a routerLink="/admin/reservas" routerLinkActive="active" class="nav-link">
             <span class="nav-icon">📅</span>
             <span>Reservas</span>
