--- a/project-meu-cantinho/frontend/src/app/shared/components/layout/layout.component.html
+++ b/project-meu-cantinho/frontend/src/app/shared/components/layout/layout.component.html
@@ -4,6 +4,6 @@
     <router-outlet></router-outlet>
   </main>
   <footer class="footer">
-    <p>&copy; 2025 Meu Cantinho. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Seu Cantinho. Todos os direitos reservados.</p>
   </footer>
 </div>
